# SketchyBar

./: .gitignore  404.html  CHANGELOG.md  CMakeLists.txt  DOCS.md  LICENSE.txt  README.md  UPDATE.md  credits.html  docusaurus.config.js  features.html  flake.nix  index.html  install.sh  makefile  package-lock.json  package.json  picker.html  search-index.json  search.html  setup.html  sidebars.js  sitemap.xml  sketchybarrc
.github/: FUNDING.yml
config/: animations.html  bar.html  components.html  events.html  items.html  popups.html  querying.html  reloading.html  tricks.html  types.html
doc/: spacebar.1  spacebar.asciidoc
docs/: Credits.md  build.sh  features.md  setup.md  sketchybar-animate.5.scd  sketchybar-components.5.scd  sketchybar-events.5.scd  sketchybar-items.5.scd  sketchybar-popup.5.scd  sketchybar-query.5.scd  sketchybar-tips.5.scd  sketchybar-types.5.scd  sketchybar.1.scd  sketchybar.5.scd
examples/: spacebarrc
man/: build.sh  sketchybar-animate.5.scd  sketchybar-components.5.scd  sketchybar-events.5.scd  sketchybar-items.5.scd  sketchybar-popup.5.scd  sketchybar-query.5.scd  sketchybar-tips.5.scd  sketchybar-types.5.scd  sketchybar.1.scd  sketchybar.5.scd
plugins/: battery.sh  caffeinate.sh  caffeinate_click.sh  calendarIndicator.sh  clock.sh  cpu_graph.sh  cpu_sys.sh  cpu_user.sh  dndIndicator.sh  front_app.sh  gitNotifications.sh  gitStatus.sh  githubIndicator.sh  mailIndicator.sh  network_down.sh  network_graph.sh  network_up.sh  power.sh  random.sh  space.sh  spotifyIndicator.sh  topmem.sh  topproc.sh  volume.sh  wifi.sh  windowTitle.sh  (+1 more)
(+402 files in other folders)
