cmake_minimum_required(VERSION 3.21)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_C_STANDARD 99)
set(CMAKE_SOURCE_DIR src)
set(CMAKE_C_FLAGS "-std=c99 -Wall -DNDEBUG -Ofast -fvisibility=hidden")
set(CMAKE_OSX_ARCHITECTURES x86_64 arm64 CACHE STRING "")
set(CMAKE_OSX_DEPLOYMENT_TARGET 10.13)
project(sketchybar)
find_library(CARBON Carbon)
find_library(COCOA Cocoa)
find_library(SKYLIGHT SkyLight /System/Library/PrivateFrameworks)
add_executable(sketchybar ${CMAKE_SOURCE_DIR}/manifest.m)
target_include_directories (sketchybar PUBLIC ${CMAKE_SOURCE_DIR} ${CMAKE_SOURCE_DIR}/misc)
target_link_libraries(sketchybar ${CARBON} ${COCOA} ${SKYLIGHT})
